# Automatic-Structured-Pruning

./: .gitignore  CIFAR10_model.h5  How_to_use_the_Framework (1).ipynb  How_to_use_the_Framework.ipynb  Prune.ipynb  Pruning.py  README.md  pruning.py  pruning_function_test.py  pruning_helper_functions_conv.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: Check-function.yml  Function-test.yml
examples/: How_to_use_the_Framework.ipynb
src/: pruning.py  pruning_helper_classes.py  pruning_helper_functions.py  pruning_helper_functions_conv.py  pruning_helper_functions_dense.py
src/asp/: __init__.py  pruning.py  pruning_helper_classes.py  pruning_helper_functions.py
src/test/: pruning_function_test.py
tests/: pruning_function_test.py
