[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asp"
version = "0.1.0"
authors = [
  {name="Daniel Konegen", email="Daniel.Konegen@Hahn-Schickard.de"}
]
description = "Structured pruning of TensorFlow models"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Hahn-Schickard/Automatic-Structured-Pruning"
"Bug Tracker" = "https://github.com/Hahn-Schickard/Automatic-Structured-Pruning/issues"